# JBE

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: attr.rs  builder_error_enum.rs  builder_struct.rs  data.rs  derive_builder.rs  derive_consuming_builder.rs  lib.rs  syn_attribute_helper.rs
tests/: main.rs
tests/derive_builder/: basic.rs  default_values.rs  generic.rs  generic_default.rs  generic_where.rs  optional_value.rs  renamed_builder.rs  renamed_error.rs
tests/derive_consuming_builder/: basic.rs  call_multiple_times.rs  call_multiple_times.stderr  default_values.rs  optional_value.rs  renamed_builder.rs
