[package]
name = "jbe"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.105", features=["full", "printing", "extra-traits"]}
proc-macro2 = "1.0.47"
quote = "1.0.21"

[dev-dependencies]
trybuild = "1.0"